# ospraye

./: .gitignore  CMakeLists.txt  README.md  do_cmake.bat  do_cmake.sh  rebar.config
c_src/: CMakeLists.txt  osp_atoms.h  osp_nif.cpp
src/: CMakeLists.txt  osp.erl  osp_types.hrl  ospraye.app.src
test/: osp_SUITE.erl  osp_tutorial_SUITE.erl
